tests/sawn/fixtures/invalid/20_bare_non_ident_key.sawn
// INVALID: Bare key that doesn't match IDENT (must be quoted)
some key="value"
